# OldSourceforgeDaixtrose

./: README.md
daixtrose/daixtrose/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  configure  configure.in  muell
daixtrose/daixtrose/src/daixtrose/: BinOps.h  ChangeDisambiguation.h  CompileTimeChecks.h  ConstRef.h  CountLeaves.h  CountOccurence.h  Daixt.h  DefaultOps.h  Differentiation.h  Disambiguation.h  Expr.h  ExtractOp.h  MatrixSelect.h  NeutralElements.h  PrettyPrinter.h  Scalar.h  Simplify.h  UnOps.h
daixtrose/daixtrose/src/demos/ChangeDisambiguation/: main.C
daixtrose/daixtrose/src/demos/Formulas/: UsingFeaturesOfExpression.C
daixtrose/daixtrose/src/demos/SimpleGetValue.1/: main.C
daixtrose/daixtrose/src/demos/SimpleGetValue.2/: main.C
daixtrose/daixtrose/src/demos/Solver/: Solver_1.C  Solver_2.C
daixtrose/daixtrose/src/demos/itl/: test_itl_bindings.cpp
daixtrose/daixtrose/src/demos/linalg/: PerformanceOfMatrixTimesVector.C  TestBlockedMatAndVec.C  TestInverse.C  TestL2_Norm.C  TestLinalg.C  TestPrintingOfBlockedMatrix.C  TestRowSum.C
daixtrose/daixtrose/src/demos/quicktour/: Differentiation.C  Linalg.C  Mini.2.C  Mini.3.C  Mini.4.C  Mini.5.C  Mini.C  PoorMansLambda.C  TinyMatrixAndVector.C
daixtrose/daixtrose/src/demos/simplify/: TestSimplify.C
daixtrose/daixtrose/src/demos/tiny/: TestTinyMat.C  TestTinyVec.C
daixtrose/daixtrose/src/error_handling/: enforce.h
daixtrose/daixtrose/src/linalg/: Disambiguation.h  ITL_Bindings.h  Inverse.h  L2_Norm.h  Linalg.h  Lump.h  Matrix.h  MatrixVectorOps.h  PrintBlockedMatrix.h  RowAndColumCounters.h  RowAndColumExtractors.h  RowSum.h  SliceIterator.h  SliceVector.h  Transpose.h  Vector.h
daixtrose/daixtrose/src/tiny/: GetIndexedValue.h  MatrixVectorOps.h  TinyMatAndVec.h  TinyMatrix.h  TinyVector.h
daixtrose/daixtrose/wwwdoc/: bugs.html  contact.html  download.html  faq.html  index.html  lgpl.html  license.html  main.css  manual.html  quicktour.html  template.html  themanual.html
daixtrose/daixtrose/wwwdoc/css/: colors.css  sflogotrick.css
daixtrose/daixtrose/wwwdoc/images/: background.xcf  buttons.xcf  main.flat.xcf  main.xcf  mini-logo.xcf  sflogo.xcf
daixtrose/daixtrose/wwwdoc/images/garbage/: happyness.5.xcf  happyness.6.xcf  happyness.8.xcf  happyness.9.flat.xcf  happyness.9.xcf
daixtrose/daixtrose/wwwdoc/manual/HEADER/: environments.tex  layout.tex  newcommands.tex  usepackages.tex
daixtrose/daixtrose/wwwdoc/manual/MAIN/: main.tex
daixtrose/daixtrose/wwwdoc/manual/TEXT/: CodeOrganization.tex  InstallationInstructions.tex  Introduction.tex  QuickTour.tex
