dnl Process this file with autoconf to produce a configure script.

# Copyright (C) 2003 Markus Werle
#
# This file is part of the Daixtrose C++ Library.  This library is free
# software; you can redistribute it and/or modify it under the
# terms of the GNU Lesser General Public License as published by the
# Free Software Foundation; either version 2.1, or (at your option)
# any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with this library; see the file COPYING.  If not, send mail to the
# developers of daixtrose (see e.g. http://daixtrose.sourceforge.net/)
#
# As a special exception, you may use this file as part of a free software
# library without restriction.  Specifically, if other files instantiate
# templates or use macros or inline functions from this file, or you compile
# this file and link it with other files to produce an executable, this
# file does not by itself cause the resulting executable to be covered by
# the GNU Lesser General Public License.  This exception does not however
# invalidate any other reasons why the executable file might be covered by
# the GNU Lesser General Public License.

AC_INIT([daixtrose], [0.0.2], [numerical.simulation@web.de])

AC_CONFIG_HEADERS(config.h)

AM_INIT_AUTOMAKE([-Wall])

AC_PREFIX_DEFAULT([/opt/daixtrose-0.0.1])

AC_LANG(C++)

# Checks for programs.
AC_PROG_CXX

AC_PROG_INSTALL
AC_PROG_LN_S

################################################################################
# Check for required libraries/header
################################################################################


################################################################################
# boost headers

AC_MSG_CHECKING([path to boost headers (http://www.boost.org/)])
AC_ARG_WITH(boost,
    AC_HELP_STRING([--with-boost=BOOST_PREFIX],
            [place where boost headers reside]),
    [ BOOSTDIR="$withval"; echo $withval; ],
    AC_MSG_ERROR([please rerun using flag --with-boost=BOOST_PREFIX ]) )     


################################################################################
# transfer the obtained information to automake

AC_SUBST(BOOSTDIR)


################################################################################
# Test the compiler's standard conformance
################################################################################

# This is only a rudimentary test, since daixtrose itself is a compiler test,
# but a compiler which correctly supports Koenig lookup is likely to be strong
# enough for this code :-)

# Koenig lookup: if missing configure dies
AC_MSG_CHECKING([support for Koenig lookup])
AC_COMPILE_IFELSE([[
    namespace N1 {
        class C {};
        void f1(const C& c) {}
    }

    namespace N2 {
        void f2() {
            N1::C x;
            f1(x);     // resolves to N1::f1() if we have Koenig lookup,
                       // otherwise this will fail to compile.
        }
    }
]],AC_MSG_RESULT(yes), [AC_MSG_ERROR([Your compiler does not support Koenig lookup])])

AC_PROG_MAKE_SET
AC_CONFIG_FILES([Makefile])

AC_OUTPUT
